--- a/app/src/main/res/layout/loginpage.xml
+++ b/app/src/main/res/layout/loginpage.xml
@@ -1,55 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/gradient_5">
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="74dp"
+        android:layout_alignParentEnd="false"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginEnd="199dp"
+        android:layout_marginBottom="490dp"
+        android:contentDescription="@string/app_name"
+        android:foregroundGravity="center"
+        app:srcCompat="@drawable/Logo" />
 
     <EditText
-        android:id="@+id/Email Input"
-        android:layout_width="263dp"
-        android:layout_height="46dp"
+        android:id="@+id/Email"
+        android:layout_width="212dp"
+        android:layout_height="44dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="392dp"
         android:ems="10"
+        android:hint="@string/email"
+        android:layout_centerHorizontal="true"
         android:inputType="textEmailAddress"
-        tools:layout_editor_absoluteX="132dp"
-        tools:layout_editor_absoluteY="100dp" />
 
-    <TextView
-        android:id="@+id/email"
-        android:layout_width="125dp"
-        android:layout_height="46dp"
-        android:text="Email"
-        android:textAlignment="center"
-        android:textAllCaps="true"
-        android:textColor="@android:color/holo_blue_dark"
-        android:textDirection="inherit"
-        android:textIsSelectable="false"
-        app:layout_constraintEnd_toStartOf="@+id/Email Input"
-        app:layout_constraintHorizontal_bias="0.428"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="100dp" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="125dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="8dp"
-        android:text="Password"
-        android:textAlignment="center"
-        android:textColor="@android:color/holo_blue_dark"
-        app:layout_constraintTop_toBottomOf="@+id/email"
-        tools:layout_editor_absoluteX="3dp" />
+        android:autofillHints="" tools:targetApi="o"/>
 
     <EditText
-        android:id="@+id/editText4"
-        android:layout_width="263dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="8dp"
+        android:id="@+id/password"
+        android:layout_width="212dp"
+        android:layout_height="44dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="340dp"
         android:ems="10"
+        android:hint="@string/password"
         android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.2"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/Email Input" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:importantForAutofill="no" />
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="220dp" />
+
+</RelativeLayout>
+
+
+
+</RelativeLayout>
