--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,4 +62,25 @@
             android:text="Button" />
     </androidx.cardview.widget.CardView>
 
+
+    <ImageButton
+        android:id="@+id/add_new_post_button"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_above="@+id/main_container"
+        android:layout_alignParentEnd="true"
+        android:src="@drawable/add"
+        android:scaleType="centerCrop"
+        android:layout_marginBottom="4dp"
+        android:layout_marginRight="12dp"
+        android:background="@color/colorPrimaryDark"
+        android:baselineAlignBottom="false"
+        android:focusableInTouchMode="false"
+
+
+
+
+
+
+/>
 </RelativeLayout>
