--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,59 +9,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient_5">
-
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="74dp"
-        android:layout_alignParentEnd="false"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginEnd="199dp"
-        android:layout_marginBottom="490dp"
-        android:contentDescription="@string/app_name"
-        android:foregroundGravity="center"
-        app:srcCompat="@drawable/logo" />
-
-    <EditText
-        android:id="@+id/Email"
-        android:layout_width="212dp"
-        android:layout_height="44dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="392dp"
-        android:ems="10"
-        android:hint="@string/email"
-        android:layout_centerHorizontal="true"
-        android:inputType="textEmailAddress"
-
-        android:autofillHints="" tools:targetApi="o" />
-
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="212dp"
-        android:layout_height="44dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="340dp"
-        android:ems="10"
-        android:hint="@string/password"
-        android:inputType="textPassword"
-        android:importantForAutofill="no" />
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="220dp" >
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Button" />
-    </androidx.cardview.widget.CardView>
-
+    
 
     <ImageButton
         android:id="@+id/add_new_post_button"
@@ -75,12 +23,6 @@
         android:layout_marginRight="12dp"
         android:background="@color/colorPrimaryDark"
         android:baselineAlignBottom="false"
-        android:focusableInTouchMode="false"
+        android:focusableInTouchMode="false" />
 
-
-
-
-
-
-/>
 </RelativeLayout>
