--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,12 +17,13 @@
         android:layout_height="48dp"
         android:layout_above="@+id/main_container"
         android:layout_alignParentEnd="true"
-        android:src="@drawable/add"
-        android:scaleType="centerCrop"
-        android:layout_marginBottom="4dp"
         android:layout_marginRight="12dp"
+        android:layout_marginBottom="4dp"
         android:background="@color/colorPrimaryDark"
         android:baselineAlignBottom="false"
-        android:focusableInTouchMode="false" />
+        android:focusableInTouchMode="false"
+        android:scaleType="centerCrop"
+        android:src="@drawable/add"
+        android:contentDescription="TODO" />
 
 </RelativeLayout>
