--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#FF9300</color>
     <color name="colorPrimaryDark">#06BDA0</color>
     <color name="colorAccent">#000000</color>
+    <color name="abs1">#bec7e7</color>
+    
 </resources>
